--- a/box_model.html
+++ b/box_model.html
@@ -15,8 +15,8 @@
 <ul>
 	<li><a href="running.html">Trail Running</a></li>
 	<li><a href="box_model.html">CSS Box Model</a></li>
+	<li><a href="navy_quartermaster.html">Navy Quartermaster</a></li>
 </ul>
-
 
 <h1>The CSS Box Model</h1>
 
