--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
 <meta name="keywords" content="CSS, Box Model, HTML, Web Development">
 <meta name="author" content= "Linda Duhadway, Bradley Beatie">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="resources/index.css">
 <title>Trail Running and box_model</title>
 
 </head>
+
+<h1>CS 1030 Spring 2024 Web Development</h1>
+
 <body>
 <ul>
 	<li><a href="running.html">Trail Running</a></li>
 	<li><a href="box_model.html">CSS Box Model</a></li>
+	<li><a href="navy_quartermaster.html">Navy Quartermaster</a></li>
 </ul>
+
+<p class="picture">
+<img src="resources/kumanotrail.jpg" alt="kumanotrail." 
+width="685" height="385"></p>
+
+<p class="picture">
+<img src="resources/box_model.jpg" alt="box model." 
+width="685" height="385"></p>
+
+<p class="picture">
+<img src="resources/pic_0337.jpg" alt="helo landing." 
+width="685" height="385"></p>
 
 </body>
 </html>
