--- a/running.html
+++ b/running.html
@@ -17,6 +17,7 @@
 <ul>
 	<li><a href="running.html">Trail Running</a></li>
 	<li><a href="box_model.html">CSS Box Model</a></li>
+	<li><a href="navy_quartermaster.html">Navy Quartermaster</a></li>
 </ul>
 
 <h1>Trail Running in Ogden </h1>
